# RTDETR_TensorRT_Deployment

./: .gitignore  README.md  environment.yml  pyproject.toml
TensorRT-Model-Optimizer/: .gitignore
TensorRT-Model-Optimizer/examples/onnx_ptq/: evaluate.py
TensorRT-Model-Optimizer/modelopt/torch/quantization/: model_calib.py
TensorRT-v10.7/parsers/: CMakeLists.txt
TensorRT-v10.7/parsers/onnx/: CMakeLists.txt  ConditionalHelpers.cpp  ConditionalHelpers.hpp  ImporterContext.cpp  ImporterContext.hpp  ModelImporter.cpp  ModelImporter.hpp  ModelRefitter.cpp  ModelRefitter.hpp  OnnxAttrs.cpp  README.md  RNNHelpers.cpp  Status.hpp  TensorOrWeights.cpp  importerUtils.cpp  importerUtils.hpp  onnxOpCheckers.cpp  onnxOpImporters.cpp  onnxProtoUtils.hpp
TensorRT-v10.7/parsers/onnx/docs/: Changelog.md  operators.md
TensorRT-v10.7/parsers/onnx/onnx_tensorrt/: __init__.py
TensorRT-v10.7/samples/: CMakeLists.txt
TensorRT-v10.7/samples/ink_plugins/: CMakeLists.txt  fused_attn_offset_prediction_kernel.cu  fused_attn_offset_prediction_kernel.h  test_fused_attn_offset_prediction-backup.cpp  test_fused_attn_offset_prediction-backup_2.cpp  test_fused_attn_offset_prediction-impl_2.cpp  test_fused_attn_offset_prediction-impl_3.cpp  test_fused_attn_offset_prediction-impl_4.cpp  test_fused_attn_offset_prediction.cpp
rtdetrv2_pytorch/: workflow.sh
rtdetrv2_pytorch/benchmark_models/: build_profile_visualize_engine.sh  tmp.layer
rtdetrv2_pytorch/benchmark_models/tensorrt_10_7/default_mtq_int8_q_qint8.onnx-best/: default_mtq_int8_q_qint8.onnx.engine.build.metadata.json  default_mtq_int8_q_qint8.onnx.engine.graph.json  default_mtq_int8_q_qint8.onnx.engine.graph.json.gv  default_mtq_int8_q_qint8.onnx.engine.profile.json  default_mtq_int8_q_qint8.onnx.engine.profile.metadata.json  default_mtq_int8_q_qint8.onnx.engine.timing.json
rtdetrv2_pytorch/benchmark_models/tensorrt_10_9/default_mtq_int8_q_qint8.onnx-/: default_mtq_int8_q_qint8.onnx.engine.build.metadata.json  default_mtq_int8_q_qint8.onnx.engine.graph.json  default_mtq_int8_q_qint8.onnx.engine.graph.json.gv  default_mtq_int8_q_qint8.onnx.engine.profile.json  default_mtq_int8_q_qint8.onnx.engine.profile.metadata.json  default_mtq_int8_q_qint8.onnx.engine.timing.json
rtdetrv2_pytorch/benchmark_models/tensorrt_10_9/default_mtq_int8_q_qint8.onnx-fp16/: default_mtq_int8_q_qint8.onnx.engine.build.metadata.json  default_mtq_int8_q_qint8.onnx.engine.graph.json  default_mtq_int8_q_qint8.onnx.engine.graph.json.gv  default_mtq_int8_q_qint8.onnx.engine.profile.json  (+2 more)
rtdetrv2_pytorch/deployment/cpp_interface/: CMakeLists.txt  build.sh  main.cpp  rt-detr-v2.profile  set_env.fish  set_env.sh
rtdetrv2_pytorch/deployment/cpp_interface/include/: calibrator.h  profile.h  rtdetr.h  rtdetr_config.h
rtdetrv2_pytorch/deployment/cpp_interface/shared_plugin_libs/: tensorrt_10_7  tensorrt_10_9
rtdetrv2_pytorch/deployment/cpp_interface/src/: calibrator.cpp  postprocess.cu  preprocess.cu  rtdetr.cpp  rtdetr_good_impl_1.cpp.ink  rtdetr_good_impl_2.cpp.ink  rtdetr_good_impl_3.cpp.ink  rtdetr_good_impl_4.cpp.ink
rtdetrv2_pytorch/deployment/python_interface/: rtdetrv2_onnxruntime.py  rtdetrv2_tensorrt.py  rtdetrv2_torch.py
rtdetrv2_pytorch/ink_plugins/: .clangd  CMakeLists.txt  README.md  build_ink_plugin.sh  ink_plugins_IPluginV2.py  ink_plugins_IPluginV3.py  ink_plugins_decorator.py  ink_plugins_v2.cu  ink_plugins_v3-allocation_in_enqueue.cu  ink_plugins_v3-allocation_in_onshapechange.cu  ink_plugins_v3-empty_enqueue.cu  ink_plugins_v3.cu  set_env.fish  set_env.sh
rtdetrv2_pytorch/ink_plugins/tensorrt_10_7/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
rtdetrv2_pytorch/ink_plugins/tensorrt_10_9/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
rtdetrv2_pytorch/src/solver/: _solver.py  det_engine.py  det_solver.py  trt_engine.py
rtdetrv2_pytorch/tools/: export_onnx.py  export_trt.py  mtq_usage.ipynb  train.py
rtdetrv2_pytorch/tools/compare_engine_onnx_output/: dataloader_for_polygraphy.py  polygraphy_compare_onnx_engine.ipynb
rtdetrv2_pytorch/tools/modify_onnx_model/: graph_surgeon_rtdetr.py
rtdetrv2_pytorch/tools/quantization/: HowTo-replace_native_layers_with_custom_layers.ipynb  export_onnx-official_pytorch.py  export_onnx_mtq_fromOnnx.py  export_onnx_mtq_fromPyTorch.py  export_onnx_pytorch-quantization.py
rtdetrv2_pytorch/tools/visualize_pytorch_model/: visualize_model.ipynb  visualize_model.py
(+12 files in other folders)
